Using monospace font to ensure that plus and minus strand input fields in new sequence alteration dialog are aligned, and also changing input text appearance to uppercase

--- a/client/apollo/css/add_sequence_alteration.css
+++ b/client/apollo/css/add_sequence_alteration.css
@@ -9,11 +9,14 @@
 
 .sequence_alteration_input_label {
 	margin-left: 3px;
-	font-size: 1.5em;
+	font-size: 1.0em;
+        font-family: courier,monospace;
 }
 
 .sequence_alteration_input_field {
 	margin-left: 10px;
+        font-family: courier,monospace;
+        text-transform: uppercase;
 }
 
 .sequence_alteration_button {
